new change added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Jungle Book</h1>
     <p>This is our first hosted website...</p>
+
+    <h2>This is new change</h2>
 </body>
 </html>
